FIX: ZEPhysicalCloth.h ZEFoundation/ZETypes.h include problem has been fixed. FIX: ZEBuild automatic public header copy bugs has been fixed. ADD: Recursive DLL dependency search path system added to ZEPluginManager.
svn path=/trunk/; revision=1153

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -36,15 +36,15 @@
 cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZECanvasBrush.cpp			Sources)
-ze_add_source(ZECanvasBrush.h			Sources Header ZEPP)
+ze_add_source(ZECanvasBrush.h			Sources Headers ZEPP)
 ze_add_source(ZECharacter.cpp			Sources)
-ze_add_source(ZECharacter.h				Sources Header ZEPP)
+ze_add_source(ZECharacter.h				Sources Headers ZEPP)
 ze_add_source(ZECloud.cpp				Sources)
-ze_add_source(ZECloud.h					Sources Header)
+ze_add_source(ZECloud.h					Sources Headers)
 ze_add_source(ZEDrawParameters.cpp		Sources)
 ze_add_source(ZEDrawParameters.h		Sources Headers)
 ze_add_source(ZEEntity.cpp				Sources)
-ze_add_source(ZEEntity.h				Sources Header ZEPP)
+ze_add_source(ZEEntity.h				Sources Headers ZEPP)
 ze_add_source(ZEEntityProvider.cpp		Sources)
 ze_add_source(ZEEntityProvider.h		Sources Headers)
 ze_add_source(ZEGame.cpp				Sources)
@@ -52,17 +52,17 @@ ze_add_source(ZEGame.h					Sources Headers)
 ze_add_source(ZEGameProvider.cpp		Sources)
 ze_add_source(ZEGameProvider.h			Sources Headers)
 ze_add_source(ZEGrid.cpp				Sources)
-ze_add_source(ZEGrid.h					Sources	Header ZEPP)
+ze_add_source(ZEGrid.h					Sources	Headers ZEPP)
 ze_add_source(ZEGizmo.cpp	    		Sources)
-ze_add_source(ZEGizmo.h					Sources	Header)
+ze_add_source(ZEGizmo.h					Sources	Headers)
 ze_add_source(ZEMoon.cpp	    		Sources)
-ze_add_source(ZEMoon.h					Sources	Header)
+ze_add_source(ZEMoon.h					Sources	Headers)
 ze_add_source(ZEPlayer.cpp				Sources)
-ze_add_source(ZEPlayer.h				Sources Header ZEPP)
+ze_add_source(ZEPlayer.h				Sources Headers ZEPP)
 ze_add_source(ZEPortal.cpp				Sources)
 ze_add_source(ZEPortal.h				Sources Headers)
 ze_add_source(ZEPresentationSlide.cpp	Sources)
-ze_add_source(ZEPresentationSlide.h		Sources Header ZEPP)
+ze_add_source(ZEPresentationSlide.h		Sources Headers ZEPP)
 ze_add_source(ZERayCaster.cpp			Sources)
 ze_add_source(ZERayCaster.h				Sources Headers)
 ze_add_source(ZEScene.cpp				Sources)
@@ -72,13 +72,13 @@ ze_add_source(ZESceneDebugDraw.h		Sources Headers)
 ze_add_source(ZESceneCuller.cpp			Sources)
 ze_add_source(ZESceneCuller.h			Sources Headers)
 ze_add_source(ZESkyBrush.cpp			Sources)
-ze_add_source(ZESkyBrush.h				Sources Header ZEPP)
+ze_add_source(ZESkyBrush.h				Sources Headers ZEPP)
 ze_add_source(ZESkyDome.cpp				Sources)
-ze_add_source(ZESkyDome.h				Sources Header)
+ze_add_source(ZESkyDome.h				Sources Headers)
 ze_add_source(ZETrigger.cpp				Sources)
-ze_add_source(ZETrigger.h				Sources Header ZEPP)
+ze_add_source(ZETrigger.h				Sources Headers ZEPP)
 ze_add_source(ZEWeather.cpp				Sources)
-ze_add_source(ZEWeather.h				Sources Header)
+ze_add_source(ZEWeather.h				Sources Headers)
 
 ze_add_library(ZEGame 
 	SOURCES ${Sources}
