FIX: Broken ZEEntity::SetWorldPosition in previous commit has been fixed. REM: ProjectCorp application has been moved to its own repository.
svn path=/trunk/; revision=1154

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -57,6 +57,8 @@ ze_add_source(ZEGizmo.cpp	    		Sources)
 ze_add_source(ZEGizmo.h					Sources	Headers)
 ze_add_source(ZEMoon.cpp	    		Sources)
 ze_add_source(ZEMoon.h					Sources	Headers)
+ze_add_source(ZEOrbit.cpp				Sources)
+ze_add_source(ZEOrbit.h					Sources Header)
 ze_add_source(ZEPlayer.cpp				Sources)
 ze_add_source(ZEPlayer.h				Sources Headers ZEPP)
 ze_add_source(ZEPortal.cpp				Sources)
