MOD: 3ds Max Scripts have integrated to ZE3dsMaxPlugin gup file. Thus there's no need to copy scripts to 3ds Max installation any longer. From now on, only .gup plugin file will be enough for plugin installation. ADD: MaxScripts have added to their corresponding projects. Zinek Logo and other images have been added to ZE3dsMaxPlugin project.
svn path=/branches/v0.5.5-NewTools/; revision=1162

--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxInteriorExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxInteriorExporter/CMakeLists.txt
@@ -43,6 +43,10 @@ ze_add_source(ZE3dsMaxInteriorExporterProcess.cpp			Sources)
 ze_add_source(ZE3dsMaxInteriorExporterOptionsDialog.h		Sources QtMocs)
 ze_add_source(ZE3dsMaxInteriorExporterOptionsDialog.cpp		Sources)
 ze_add_source(ZE3dsMaxInteriorExporterOptionsWidget.ui		Sources QtUI)
+ze_add_source(ZE3dsMaxInteriorActions.cpp					Sources)
+ze_add_source(ZE3dsMaxInteriorActions.h						Sources)
+ze_add_source(ZE3dsMaxInteriorScriptRoom.ms					Sources ZEFC)
+ze_add_source(ZE3dsMaxInteriorScriptDoor.ms					Sources ZEFC)
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
