--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
@@ -35,10 +35,12 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZE3dsMaxUI.h					Sources)
-ze_add_source(ZE3dsMaxUI.cpp				Sources)
-ze_add_source(ZE3dsMaxUIDescription.h		Sources)
-ze_add_source(ZE3dsMaxUIDescription.cpp		Sources)
+ze_add_source(ZE3dsMaxUI.h						Sources)
+ze_add_source(ZE3dsMaxUI.cpp					Sources)
+ze_add_source(ZE3dsMaxUIDescription.h			Sources)
+ze_add_source(ZE3dsMaxUIDescription.cpp			Sources)
+ze_add_source(ZE3dsMaxScriptCommonUtilities.ms 	Sources ZEFC)
+ze_add_source(ZE3dsMaxScriptRemove.ms 			Sources ZEFC)
 
 ze_add_library(ZE3dsMaxUI 
 	SOURCES ${Sources}
