ADD: ZECodeTools have been renamed to ZECodeUtilities. Due to SVN bug renaming will be done in several steps.
svn path=/branches/v0.5.5-NewTools/; revision=1168

--- a/Source/ZECodeUtilities/CMakeLists.txt
+++ b/Source/ZECodeUtilities/CMakeLists.txt
@@ -35,11 +35,7 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_module(ZECodeUtilities)
-ze_add_module(ZEFoundation)
-ze_add_module(ZEEngine)
-ze_add_module(ZEModules			OPTIONAL DEFAULT)
-ze_add_module(ZEditor			OPTIONAL DEFAULT)
-ze_add_module(ZETools			OPTIONAL DEFAULT)
+ze_set_project_folder("ZECodeUtilities")
 
-ze_add_cmake_project(ZESource)
+ze_add_module(ZEFileCompiler)
+#ze_add_module(ZEMetaCompiler)
