--- a/Source/ZECodeUtilities/ZEFileCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEFileCompiler/CMakeLists.txt
@@ -35,11 +35,12 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_module(ZECodeUtilities)
-ze_add_module(ZEFoundation)
-ze_add_module(ZEEngine)
-ze_add_module(ZEModules			OPTIONAL DEFAULT)
-ze_add_module(ZEditor			OPTIONAL DEFAULT)
-ze_add_module(ZETools			OPTIONAL DEFAULT)
+ze_add_source(ZEFileCompiler.cpp 			Sources)
+ze_add_source(ZEFileCompiler.h   			Sources)
+ze_add_source(ZEFileCompilerOptions.cpp		UtilitySources)
+ze_add_source(ZEFileCompilerOptions.h		UtilitySources)
+ze_add_library(ZEFileCompiler SOURCES ${Sources} LIBS ZEFoundation)
 
-ze_add_cmake_project(ZESource)
+
+ze_add_source(ZEMain.cpp					UtilitySources)
+ze_add_executable(ZEFC CONSOLE SOURCES ${UtilitySources} LIBS ZEFoundation ZEFileCompiler)
