ADD : ZEUILAbel added to ZEUI. And minor changes done on ZEUIButtonControl.(NOT Complete)
svn path=/trunk/; revision=1172

--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -85,18 +85,25 @@ ze_add_source(ZEUISceneStatisticsControl.cpp		Sources)
 ze_add_source(ZEUISceneStatisticsControl.h			Sources Headers)
 ze_add_source(ZEUIPortalMapStatisticsControl.cpp	Sources)
 ze_add_source(ZEUIPortalMapStatisticsControl.h		Sources Headers)
-ze_add_source(ZEUIConsole.cpp	Sources)
-ze_add_source(ZEUIConsole.h		Sources Headers)
-ze_add_source(ZEUIHorizontalScrollbar.cpp	Sources)
-ze_add_source(ZEUIHorizontalScrollbar.h		Sources Headers)
-ze_add_source(ZEUILoadingBar.cpp	Sources)
-ze_add_source(ZEUILoadingBar.h		Sources Headers)
-ze_add_source(ZEUILoadingScreen.cpp	Sources)
-ze_add_source(ZEUILoadingScreen.h		Sources Headers)
-ze_add_source(ZEUIScrollArea.cpp	Sources)
-ze_add_source(ZEUIScrollArea.h		Sources Headers)
-ze_add_source(ZEUIVerticalScrollbar.cpp	Sources)
-ze_add_source(ZEUIVerticalScrollbar.h		Sources Headers)
+ze_add_source(ZEUIConsole.cpp						Sources)
+ze_add_source(ZEUIConsole.h							Sources Headers)
+ze_add_source(ZEUIHorizontalScrollbar.cpp			Sources)
+ze_add_source(ZEUIHorizontalScrollbar.h				Sources Headers)
+ze_add_source(ZEUILoadingBar.cpp					Sources)
+ze_add_source(ZEUILoadingBar.h						Sources Headers)
+ze_add_source(ZEUILoadingScreen.cpp					Sources)
+ze_add_source(ZEUILoadingScreen.h					Sources Headers)
+ze_add_source(ZEUIScrollArea.cpp					Sources)
+ze_add_source(ZEUIScrollArea.h						Sources Headers)
+ze_add_source(ZEUIVerticalScrollbar.cpp				Sources)
+ze_add_source(ZEUIVerticalScrollbar.h				Sources Headers)
+
+ze_add_source(ZEUILabel.cpp							Sources)
+ze_add_source(ZEUILabel.h							Sources Headers)
+ze_add_source(ZEUITextCursor.cpp					Sources)
+ze_add_source(ZEUITextCursor.h						Sources Headers)
+
+
 
 ze_add_library(ZEUI
 	LIBS ZEFoundation freetype2410
