ADD: ZEModelHelper has been added to ZEModel for helper support. MOD: ZE3dsMaxPlugin has been modified according to ZEModelHelper. MOD: ZE3dsMaxPlugin model visibility option added.
svn path=/branches/v0.5.5-NewTools/; revision=1173

--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
@@ -40,6 +40,7 @@ ze_add_source(ZE3dsMaxUI.cpp					Sources)
 ze_add_source(ZE3dsMaxUIDescription.h			Sources)
 ze_add_source(ZE3dsMaxUIDescription.cpp			Sources)
 ze_add_source(ZE3dsMaxScriptCommonUtilities.ms 	Sources ZEFC)
+ze_add_source(ZE3dsMaxScriptHelper.ms			Sources ZEFC)
 ze_add_source(ZE3dsMaxScriptRemove.ms 			Sources ZEFC)
 
 ze_add_library(ZE3dsMaxUI 
