ADD: Visual Studio autoexp.dat file patch ZEAutoExp.txt has been added.
svn path=/trunk/; revision=1202

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(ZESocket)
 add_subdirectory(ZEML)
 add_subdirectory(ZERegEx)
 
+ze_add_source(ZEAutoExpt.txt			Sources Headers)
 ze_add_source(ZEData.h 					Sources Headers)
 ze_add_source(ZEData.cpp 				Sources)
 ze_add_source(ZEDLL.h 					Sources Headers)
