FIX : ZEArrayIterators.h IsEnd and move functions' bugs fixed. CHANGE : ZEArrayIterator and ZEArrayIteratorConst tests are removed from ZEArrayTests.cpp. ADD : ZEArrayIteratorsTests.cpp added. FIX : ZEList FindIndex bug fixed. ADD : ZEFormatTests.cpp and ZEFormatArgumentTests.cpp are added. MODIFICATION :  Test cases added for functions with Format parameters in ZEStringTests.cpp.
svn path=/trunk/; revision=1206

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -41,6 +41,7 @@ ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
 ze_add_source(ZEArrayIterators.cpp		Sources)
 ze_add_source(ZEArrayIterators.h		Sources Headers)
+ze_add_source(ZEArrayIteratorsTests.cpp		Tests)
 ze_add_source(ZEArrayTests.cpp			Tests)
 ze_add_source(ZEDelegate.cpp			Sources)
 ze_add_source(ZEDelegate.h				Sources Headers)
@@ -93,8 +94,10 @@ ze_add_source(ZEPointerTestClass.h		Tests)
 ze_add_source(ZEPointerTestClass.cpp	Tests)
 ze_add_source(ZEFormat.h				Sources Headers)
 ze_add_source(ZEFormat.cpp				Sources)
+ze_add_source(ZEFormatTests.cpp				Tests)
 ze_add_source(ZEFormatArgument.h		Sources)
 ze_add_source(ZEFormatArgument.cpp		Sources)
+ze_add_source(ZEFormatArgumentTests.cpp		Tests)
 ze_add_source(ZEFormatOverloads.cpp		Sources)
 ze_add_source(ZEStringWriter.cpp		Sources)
 ze_add_source(ZEStringWriter.h			Sources Headers)
