ADD: BitesOffice Application added. MOD: Gathering Statistics for draw and render has been extended, but may require further optimization. ADD: Helper support for ZEInterior added. ADD: 3ds Max User Defined Properties support added to Exporters. FIX: Directional Light Subsurface scattering bug fixed. FIX: ZEGraphics texture quality can now be read from options file. FIX: UI ZOrder bug fixed.
svn path=/branches/Demo/; revision=1235

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -43,6 +43,8 @@ ze_add_source(ZECloud.cpp				Sources)
 ze_add_source(ZECloud.h					Sources Header)
 ze_add_source(ZEDrawParameters.cpp		Sources)
 ze_add_source(ZEDrawParameters.h		Sources Headers)
+ze_add_source(ZEDrawStatistics.cpp		Sources)
+ze_add_source(ZEDrawStatistics.h		Sources Headers)
 ze_add_source(ZEEntity.cpp				Sources)
 ze_add_source(ZEEntity.h				Sources Header ZEPP)
 ze_add_source(ZEEntityProvider.cpp		Sources)
