ADD: New meta system has been integrated to engine
svn path=/branches/v0.6.1-NewMeta/; revision=1242

--- a/Source/ZEMetaCompiler/CMakeLists.txt
+++ b/Source/ZEMetaCompiler/CMakeLists.txt
@@ -51,7 +51,7 @@ ze_add_source(ZEMetaProcessorInternal.h  	Sources)
 ze_add_source(ZEMetaProcessorClang.cpp		Sources)
 
 ze_add_executable(ZEMetaCompiler	SOURCES ${Sources} CONSOLE 
-	LIBS ZEFoundation ZENewMeta
+	LIBS ZEFoundation ZEMeta
 		clangBasic.lib
 		clangFrontend.lib
 		clangDriver.lib
