--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -69,6 +69,8 @@ ze_add_source(ZEScene.cpp				Sources)
 ze_add_source(ZEScene.h					Sources Headers)
 ze_add_source(ZESceneDebugDraw.cpp		Sources)
 ze_add_source(ZESceneDebugDraw.h		Sources Headers)
+ze_add_source(ZEDebugDrawer.cpp			Sources)
+ze_add_source(ZEDebugDrawer.h			Sources Headers)
 ze_add_source(ZESceneCuller.cpp			Sources)
 ze_add_source(ZESceneCuller.h			Sources Headers)
 ze_add_source(ZESkyBrush.cpp			Sources)
