--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -39,8 +39,6 @@ ze_add_source(ZEFontResourceBitmap.cpp				Sources)
 ze_add_source(ZEFontResourceBitmap.h				Sources Headers)
 ze_add_source(ZEFontResourceDynamic.cpp				Sources)
 ze_add_source(ZEFontResourceDynamic.h				Sources Headers)
-ze_add_source(ZEFontFile.cpp						Sources)
-ze_add_source(ZEFontFile.h							Sources Headers)
 ze_add_source(ZEFontResource.cpp					Sources)
 ze_add_source(ZEFontResource.h						Sources Headers)
 ze_add_source(ZEIUCheckBoxControl.cpp				Sources)
@@ -69,10 +67,12 @@ ze_add_source(ZEUIVerticalSliderControl.cpp			Sources)
 ze_add_source(ZEUIVerticalSliderControl.h			Sources Headers)
 ze_add_source(ZEUTextEditControl.cpp				Sources)
 ze_add_source(ZEUTextEditControl.h					Sources Headers)
-ze_add_source(ZEUISequencePlayer.cpp			Sources)
-ze_add_source(ZEUISequencePlayer.h				Sources Headers)
+ze_add_source(ZEUISequencePlayer.cpp				Sources)
+ze_add_source(ZEUISequencePlayer.h					Sources Headers)
+ze_add_source(ZEUISceneStatisticsControl.cpp		Sources)
+ze_add_source(ZEUISceneStatisticsControl.h			Sources Headers)
 #ze_add_source(ZEUIInteriorStatisticsControl.cpp	Sources)
-#ze_add_source(ZEUIInteriorStatisticsControl.h	Sources Headers)
+#ze_add_source(ZEUIInteriorStatisticsControl.h		Sources Headers)
 ze_add_source(ZEUILabel.cpp							Sources)
 ze_add_source(ZEUILabel.h							Sources Headers)
 ze_add_source(ZEUITextCursor.cpp					Sources)
