--- a/Source/ZEModules/CMakeLists.txt
+++ b/Source/ZEModules/CMakeLists.txt
@@ -56,10 +56,10 @@ ze_add_library(ZEModules
 	SOURCES ${Sources}
 	LIBS ${Modules})
 
-ze_combine_libraries(ZEModules 
-	LIBS ZEDirect3D9
-		 ZEWindowsInput
-		 ZEVRPNInput
-		 ZEDirectSound
-		 ZEOpenAL
-		 ZEPhysX)
+#ze_combine_libraries(ZEModules 
+#	LIBS ZEDirect3D9
+#		 ZEWindowsInput
+#		 ZEVRPNInput
+#		 ZEDirectSound
+#		 ZEOpenAL
+#		 ZEPhysX)
