--- a/Source/ZEditor/ZEDSoundExtensionsPlugIn/CMakeLists.txt
+++ b/Source/ZEditor/ZEDSoundExtensionsPlugIn/CMakeLists.txt
@@ -36,20 +36,16 @@
 cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEDSoundExtensionsPlugIn.h			Sources)
-ze_add_source(ZEDSoundExtensionsPlugIn.cpp		Sources)
-
+ze_add_source(ZEDSoundExtensionsPlugIn.cpp			Sources)
 ze_add_source(ZEDSoundFileExtension.h				Sources)
-ze_add_source(ZEDSoundFileExtension.cpp			Sources)
-
+ze_add_source(ZEDSoundFileExtension.cpp				Sources)
 ze_add_source(ZEDSoundFilePreviewWidget.h			Sources QtMocs)
-ze_add_source(ZEDSoundFilePreviewWidget.cpp		Sources)
+ze_add_source(ZEDSoundFilePreviewWidget.cpp			Sources)
 
-include_directories (${CMAKE_CURRENT_BINARY_DIR})
+qt4_add_resources(QtResourceFiles ${QtResources})
+qt4_wrap_ui(QtUIFiles ${QtUI})
+qt4_wrap_cpp(QtMocFiles  ${QtMocs})
 
-qt4_add_resources (QtResourceFiles ${QtResources})
-qt4_wrap_ui (QtUIFiles ${QtUI})
-qt4_wrap_cpp (QtMocFiles  ${QtMocs})
-
-add_library (ZEDSoundExtensionsPlugIn ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
-
-set_property(TARGET ZEDSoundExtensionsPlugIn PROPERTY FOLDER "ZEditor")
+ze_add_library(ZEDSoundExtensionsPlugIn 
+	SOURCES ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles} 
+	LIBS ZESound libQt)
