--- a/Source/ZEditor/ZEDUndoRedo/CMakeLists.txt
+++ b/Source/ZEditor/ZEDUndoRedo/CMakeLists.txt
@@ -39,18 +39,13 @@ ze_add_source(ZEDUndoRedoManager.h			Sources QtMocs)
 ze_add_source(ZEDUndoRedoManager.cpp		Sources)
 ze_add_source(ZEDUndoRedoOperation.h		Sources)
 ze_add_source(ZEDUndoRedoOperation.cpp		Sources)
-
 ze_add_source(ZEDUndoRedo.h					Sources)
 ze_add_source(ZEDUndoRedo.cpp				Sources)
-
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
 qt4_wrap_cpp (QtMocFiles  ${QtMocs})
-#qt4_automoc (QtMocFiles  ${QtMocs})
 
-add_library (ZEDUndoRedo ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
-
-set_property(TARGET ZEDUndoRedo PROPERTY FOLDER "ZEditor")
+ze_add_library(ZEDUndoRedo 
+	SOURCES ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles}
+	LIBS libQt)
