--- a/Source/ZEEngine/ZESound/CMakeLists.txt
+++ b/Source/ZEEngine/ZESound/CMakeLists.txt
@@ -58,4 +58,4 @@ ze_add_source(ZESoundSource3D.h				Sources Headers ZEPP)
 ze_add_library(ZESound 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZEFoundation libmpg123 libogg libvorbis libvorbisfile)
+	LIBS ZEFoundation libmpg123 libOGG libVorbis)
